internal/gatewayapi/testdata/envoyextensionpolicy-target-selectors.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
      labels:
        group: wasm-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-2
      labels:
        group: wasm-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-3
      labels:
        group: wasm-2
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-4
      labels:
        group: wasm-2
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
grpcRoutes:
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: GRPCRoute
    metadata:
      namespace: default
      name: grpcroute-1
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
          sectionName: http
        - namespace: envoy-gateway
          name: gateway-3
          sectionName: http
      rules:
        - backendRefs:
          - group: gateway.envoyproxy.io
            kind: Backend
            name: backend-fqdn
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: GRPCRoute
    metadata:
      namespace: default
      name: grpcroute-2
      labels:
        group: 22s
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
          sectionName: http
        - namespace: envoy-gateway
          name: gateway-3
          sectionName: http
      rules:
        - backendRefs:
            - group: gateway.envoyproxy.io
              kind: Backend
              name: backend-fqdn
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-1
    spec:
      hostnames:
        - gateway.envoyproxy.io
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-2
          sectionName: http
        - namespace: envoy-gateway
          name: gateway-4
          sectionName: http
      rules:
        - matches:
            - path:
                value: "/"
          backendRefs:
            - group: gateway.envoyproxy.io
              kind: Backend
              name: backend-fqdn
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-2
      labels:
        group: 21s
    spec:
      hostnames:
        - gateway.envoyproxy.io
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-2
          sectionName: http
        - namespace: envoy-gateway
          name: gateway-4
          sectionName: http
      rules:
        - matches:
            - path:
                value: "/"
          backendRefs:
            - group: gateway.envoyproxy.io
              kind: Backend
              name: backend-fqdn
envoyExtensionPolicies:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: EnvoyExtensionPolicy
    metadata:
      namespace: policies
      name: policy-for-gateway-1s
    spec:
      targetSelectors:
        - group: gateway.networking.k8s.io
          kind: Gateway
          matchLabels:
            group: wasm-1
          namespaces:
            from: All
      wasm:
      - name: wasm-filter-1
        code:
          type: HTTP
          http:
            url: https://www.example.com/wasm-filter-1.wasm
            sha256: 2d89c4c6ab2a1c615c7696ed37ade9e50654ac70384b5d45100eb08e62130ff4
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: BackendTrafficPolicy
    metadata:
      namespace: policies
      name: policy-for-gateway-2s
    spec:
      targetSelectors:
        - group: gateway.networking.k8s.io
          kind: Gateway
          matchLabels:
            group: wasm-filter-2
          namespaces:
            from: All
      wasm:
      - name: wasm-filter-2
        code:
          type: HTTP
          http:
            url: https://www.example.com/wasm-filter-2.wasm
            sha256: 2d89c4c6ab2a1c615c7696ed37ade9e50654ac70384b5d45100eb08e62130ff4
#  - apiVersion: gateway.envoyproxy.io/v1alpha1
#    kind: BackendTrafficPolicy
#    metadata:
#      namespace: policies
#      name: policy-for-gateway-1s-fail-override
#    spec:
#      targetSelectors:
#        - group: gateway.networking.k8s.io
#          kind: Gateway
#          matchLabels:
#            group: 1s
#          namespaces:
#            from: All
#      timeout:
#        tcp:
#          connectTimeout: 10s
#  - apiVersion: gateway.envoyproxy.io/v1alpha1
#    kind: BackendTrafficPolicy
#    metadata:
#      namespace: policies
#      name: policy-for-gateway-no-namespace-selector-ignored
#    spec:
#      targetSelectors:
#        - group: gateway.networking.k8s.io
#          kind: Gateway
#          matchLabels:
#            group: 1s
#      timeout:
#        tcp:
#          connectTimeout: 10s
#  - apiVersion: gateway.envoyproxy.io/v1alpha1
#    kind: BackendTrafficPolicy
#    metadata:
#      namespace: policies-no-refgrant
#      name: policy-for-gateway-no-refgrant
#    spec:
#      targetSelectors:
#        - group: gateway.networking.k8s.io
#          kind: Gateway
#          matchLabels:
#            group: 1s
#          namespaces:
#            from: All
#      timeout:
#        tcp:
#          connectTimeout: 10s
#  - apiVersion: gateway.envoyproxy.io/v1alpha1
#    kind: BackendTrafficPolicy
#    metadata:
#      namespace: policies
#      name: policy-for-route-override-21s
#    spec:
#      targetSelectors:
#        - group: gateway.networking.k8s.io
#          kind: HTTPRoute
#          matchLabels:
#            group: 21s
#          namespaces:
#            from: All
#      timeout:
#        tcp:
#          connectTimeout: 21s
#  - apiVersion: gateway.envoyproxy.io/v1alpha1
#    kind: BackendTrafficPolicy
#    metadata:
#      namespace: policies
#      name: policy-for-route-override-22s
#    spec:
#      targetSelectors:
#        - group: gateway.networking.k8s.io
#          kind: GRPCRoute
#          matchLabels:
#            group: 22s
#          namespaces:
#            from: All
#      timeout:
#        tcp:
#          connectTimeout: 22s
#  - apiVersion: gateway.envoyproxy.io/v1alpha1
#    kind: BackendTrafficPolicy
#    metadata:
#      namespace: policies-no-refgrant
#      name: policy-for-routes-no-refgrant
#    spec:
#      targetSelectors:
#        - group: gateway.networking.k8s.io
#          kind: HTTPRoute
#          matchLabels:
#            group: 21s
#          namespaces:
#            from: All
#      timeout:
#        tcp:
#          connectTimeout: 10s
referenceGrants:
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: ReferenceGrant
    metadata:
      name: refg-eep-gws
      namespace: envoy-gateway
    spec:
      from:
        - group: gateway.envoyproxy.io
          kind: EnvoyExtensionPolicy
          namespace: policies
      to:
        - group: gateway.networking.k8s.io
          kind: Gateway
#  - apiVersion: gateway.networking.k8s.io/v1alpha2
#    kind: ReferenceGrant
#    metadata:
#      name: refg-btp-routes
#      namespace: default
#    spec:
#      from:
#        - group: gateway.envoyproxy.io
#          kind: BackendTrafficPolicy
#          namespace: policies
#      to:
#        - group: gateway.networking.k8s.io
#          kind: HTTPRoute
#        - group: gateway.networking.k8s.io
#          kind: GRPCRoute
backends:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: Backend
    metadata:
      name: backend-fqdn
      namespace: default
    spec:
      endpoints:
        - fqdn:
            hostname: primary.foo.com
            port: 3000
